<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activities.PatternAndOtherSettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/pattern"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/enable_pattern"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enablePattern"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/hiding"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/hide_pattern_drawing"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/hidePatternDraw"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/vibrating"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/vibrating_while_pattern_drawing"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/vibratePatternDraw"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/sharing"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/disable_note_sharing"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enableNoteSharing"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
