<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBgPattern"
    android:layout_height="match_parent"
    tools:context=".activities.CreatePatternLockActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_weight="2"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/app_icon"/>

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_email_or_text_key"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:imeOptions="actionDone"
        android:paddingEnd="10dp"
        android:inputType="textWebEmailAddress|text"
        android:background="@android:color/white" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/patternTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/create_a_pattern"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"/>

    <com.andrognito.patternlockview.PatternLockView
        android:layout_weight="4"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:id="@+id/pattern_lock_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:dotCount="3"
        android:visibility="invisible"
        app:dotNormalSize="12dp"
        app:dotSelectedSize="24dp"
        app:pathWidth="4dp"
        app:aspectRatio="square"
        app:normalStateColor="@color/white"
        app:dotAnimationDuration="150"
        app:pathEndAnimationDuration="100" />

    <LinearLayout
        android:id="@+id/createPatternBtnLayout"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/skipPatternBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="skipCreateLockPattern"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip"
            android:visibility="invisible"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/createPatternBtn"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:onClick="createLockPattern"
            android:text="@string/create_pattern"
            android:textAllCaps="false"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>
